--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/banner/banner.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/banner/banner.component.html
@@ -2,6 +2,6 @@
     <header>
       <div class="contenedor">
         <img class="img-fluid"
-          src="./assets/banner1.png" id="banner1">
+          [src]="url_banner" id="banner1">
       </div>
     </header>
