--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/dashboard/dashboard.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
     <section class="p-2 m-0 border-0 bd-example">
         <div class="container text-center">
             <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-                    <button type="button" class="btn btn-dark btn-sm"><a routerLink="/inicio">
+                    <button type="button" class="btn btn-dark btn-sm"><a routerLink="">
                             <img src="./assets/home.png"></a>
                     </button>
             </div>
@@ -55,41 +55,41 @@
     <!--EXPERIENCIA-->
     <section class="p-2 m-0 border-0 bd-example">
         <div class="container text-center">
-            <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+            <span class="d-grid gap-2 d-md-flex justify-content-md-center">
                 <button class="btn btn-dark btn-sm" data-bs-target="#modalExperiencia"
                     data-bs-toggle="modal">Experiencia</button>
                 <app-btn-add-experiencia></app-btn-add-experiencia>
-            </div>
+            </span>
         </div>
     </section>
     <!--EDUCACION-->
     <section class="p-2 m-0 border-0 bd-example">
         <div class="container text-center">
-            <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+            <span class="d-grid gap-2 d-md-flex justify-content-md-center">
                 <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalEducacion"
                     data-bs-toggle="modal">Educación</button>
                 <app-btn-add-educacion></app-btn-add-educacion>
-            </div>
+            </span>
         </div>
     </section>
     <!--SKILLS-->
     <section class="p-2 m-0 border-0 bd-example">
         <div class="container text-center">
-            <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+            <span class="d-grid gap-2 d-md-flex justify-content-md-center">
                     <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalSkills"
                         data-bs-toggle="modal">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Skill&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
                     <app-btn-add-skill></app-btn-add-skill>
-            </div>
+            </span>
         </div>
     </section>
     <!--PROYECTOS-->
     <section class="p-2 m-0 border-0 bd-example">
         <div class="container text-center">
-            <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+            <span class="d-grid gap-2 d-md-flex justify-content-md-center">
                 <button type="button" class="btn btn-dark btn-sm" data-bs-target="#modalProyectos"
                     data-bs-toggle="modal">Proyectos</button>
                 <app-btn-add-proyecto></app-btn-add-proyecto>
-            </div>
+            </span>
         </div>
     </section>
 </div>
