--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/skills/skills.component.css
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/skills/skills.component.css
@@ -17,11 +17,17 @@
     margin-right: 1em;
     padding-top: 15px;
     padding-bottom: 15px;
-    padding-left: 2em;
-    padding-right: 2em;
+    padding-left: 3em;
+    padding-right: 3em;
     border-radius: 1em;
 }
-
+#barras{
+    padding-left: 6em;
+    padding-right: 6em;
+}
+.progress{
+    
+}
 .table.table-dark {
     margin-top: 3px;
     margin-right: 1px;
