--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/skills/skills.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/skills/skills.component.html
@@ -1,41 +1,27 @@
 <section id="skill" class="skills">
   <div class="contenedor">
-    <div class="row bg-dark p-2 bg-opacity-10">
-      <div class="col-md-10">
-        <h4>Skills</h4>
+    <div>
+      <div class="row bg-dark p-2 bg-opacity-10">
+        <div class="col-md-10">
+          <h4>Skills</h4>
+        </div>
       </div>
-    </div>
-    <div class="table-responsive">
-      <table class="table table-responsive table-rb-#rgb(255, 226, 146)">
-        <thead>
-          <tr>
-            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-            <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td colspan="1">
-              <p>Nombre del skill</p>
-            </td>
-            <td colspan="8">
-              <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" role="progressbar"
-                  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
-                  75%
+      <div class="table-responsive" *ngFor="let habilidad of skills">
+        <table class="table table-responsive table-rb-#rgb(255, 226, 146)">
+          <tbody>
+            <tr>
+              <td colspan="12" id="barras">
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"[ngClass]="" role="progressbar"
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width.%]="habilidad.porcentaje">
+                    {{habilidad.porcentaje}}% {{habilidad.skill}}
+                  </div>
                 </div>
-              </div>
-            </td>
-            <td colspan="2">
-            </td>
-          </tr>
-        </tbody>
-      </table>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </section>
