Se realizaron cambios en los nombres de los atributos, se habia puest, final esa es una palabrareservada en Java

--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/educacion/educacion.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/educacion/educacion.component.html
@@ -21,15 +21,15 @@
               <p>{{educacion.titulacion}}</p>
             </td>
             <td>
-              <p>{{educacion.inicio}}</p>
+              <p>{{educacion.inicio_edu}}</p>
             </td>
             <td>
-              <p>{{educacion.final}}</p>
+              <p>{{educacion.fin_edu}}</p>
             </td>
           </tr>
           <tr>
             <td colspan="4">
-              <P>{{educacion.descripcion}}</P>
+              <P>{{educacion.descripcion_edu}}</P>
             </td>
           </tr>
         </tbody>
