--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/experiencia/experiencia.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/experiencia/experiencia.component.html
@@ -22,15 +22,15 @@
               <P>{{experiencia.puesto}}</P>
             </td>
             <td>
-              <p>{{experiencia.inicio}}</p>
+              <p>{{experiencia.inicio_exp}}</p>
             </td>
             <td>
-              <P>{{experiencia.final}}</P>
+              <P>{{experiencia.fin_exp}}</P>
             </td>
           </tr>
           <tr>
             <td colspan="12">
-              <p>{{experiencia.descripcion}}</p>
+              <p>{{experiencia.descripcion_exp}}</p>
             </td>
           </tr>
         </tbody>
