--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/proyectos/proyectos.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/proyectos/proyectos.component.html
@@ -16,18 +16,18 @@
                 <tbody>
                     <tr>
                         <td>
-                            <p>{{proyecto.nombre}}</p>
+                            <p>{{proyecto.nombre_proy}}</p>
                         </td>
                         <td colspan="2">
-                            <p>{{proyecto.descripcion}}</p>
+                            <p>{{proyecto.descripcion_proy}}</p>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <p>{{proyecto.inicio}}</p>
+                            <p>{{proyecto.inicio_proy}}</p>
                         </td>
                         <td>
-                            <p>{{proyecto.final}}</p>
+                            <p>{{proyecto.fin_proy}}</p>
                         </td>
                         <td>
                           <img [src]="proyecto.imagen">
