--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/modal-login/modal-login.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/modal-login/modal-login.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="modal-body">
                 <!--Aqui va el formulario para ingresar usuario y contraseña-->
-                <div class="mb-3 row">
+                <!--<div class="mb-3 row">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
                         <input type="email" class="form-control" id="exampleFormControlInput1"
@@ -20,11 +20,45 @@
                     <div class="col-sm-10">
                         <input type="password" class="form-control" id="inputPassword">
                     </div>
-                </div>
+                </div>-->
+                <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+                    <div>
+                        <label for="email">Email: &nbsp;&nbsp;&nbsp;</label>
+                        <input type="email" formControlName="email" [class.border-danger]="MailValid">
+                    </div>
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="Mail?.errors  && Mail?.touched">
+                        <p *ngIf="Mail?.hasError('required')" class="error">
+                            El email es requerido.
+                        </p>
+                        <p *ngIf="Mail?.hasError('email')" class="error">
+                            El formato del email debe ser válido.
+                        </p>
+                    </div>
+                    <br />
+                    <div>
+                        <label for="exampleInputPassword1" class="form-label">Password:  &nbsp;&nbsp;&nbsp;</label>
+                        <input type="password" formControlName="password" [class.border-danger]="PasswordValid">
+                    </div>
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="Password?.errors  && Password?.touched">
+                        <p *ngIf="Password?.hasError('required')" class="error">
+                            El password es requerido.
+                        </p>
+                        <p *ngIf="Password?.errors?.minlength
+                " class="error">
+                            El password debe ser de 8 o más caracteres.
+                        </p>
+                    </div>
+                    <br />
+                    <div>
+                        <button type="submit" class="btn btn-dark btn-sm">Iniciar Sesión</button>
+                    </div>
+                </form>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-dark btn-sm">Iniciar sesión</button>
-            </div>
+            <!--<div class="modal-footer">
+                <button type="submit" class="btn btn-dark btn-sm">Iniciar sesión</button>
+            </div>-->
         </div>
     </div>
 </div>
