Se realizaron cambios y correciones para el CRUD, por el momento solo funciona  Read de todos los objetos y Delete del Skills

--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/banner/banner.component.css
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/banner/banner.component.css
@@ -22,6 +22,12 @@
    position: absolute;
    z-index: 1!important;
 }
+.botonAdd:hover{
+   filter:alpha(opacity=50);
+   -moz-opacity: 0.5;
+   opacity: 0.5;
+   -khtml-opacity: 0.5;
+}
 #lapiz{
    position:absolute;
    z-index: 2!important;
