--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/boton-login/boton-login.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/boton-login/boton-login.component.html
@@ -1,5 +1,4 @@
 <!--Boton de login-->
-<a type="button" href="" class="iconos" data-bs-target="#modalLogin" data-bs-toggle="modal">
+<a type="button" href="/login" class="iconos">
     <img class="nav-menu-link-img" src="./assets/lock.png" id="bloqueado">
 </a>
-<app-modal-login></app-modal-login>
