--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-modal-experiencia/add-modal-experiencia.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/add-modal-experiencia/add-modal-experiencia.component.html
@@ -6,7 +6,7 @@
                 <h5 class="modal-title" id="exampleModalLabel">Agregar experiencia</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div>
                 <!--Aqui va el formulario-->
                 <div class="row">
                     <div class="col-12 order-first">
@@ -36,7 +36,7 @@
                             <label for="formFileSm" class="form-label">
                                 <h5>Desde</h5>
                             </label>
-                            <input class="form-control form-control-sm" type="date" placeholder=".form-control-sm"
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                             <label for="formFileSm" class="form-label">
                                 <h5>Hasta</h5>
                             </label>
-                            <input class="form-control form-control-sm" type="date" placeholder=".form-control-sm"
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
                         </div>
                     </div>
@@ -75,20 +75,20 @@
                     </div>
                 </div>
                 <!--Boton de guardado-->
-                <div class="modal-footer">
-                    <div class="row d-flex">
-                        <div class="col-12 d-flex justify-content-end">
-                            <div class="mb-3 float-right">
-                                <button type="button" class="btn btn-dark btn-sm">Cancelar</button>
-                            </div>
-                            &nbsp;
-                            <div class="mb-3 float-right">
-                                <button type="button" class="btn btn-dark btn-sm">Guardar</button>
-                            </div>
+                <div class="row d-flex">
+                    <div class="col-12 d-flex justify-content-end">
+                        <div class="mb-3 float-right">
+                            <button type="button" class="btn btn-dark btn-sm">Cancelar</button>
+                        </div>
+                         &nbsp;
+                        <div class="mb-3 float-right">
+                            <button type="button" class="btn btn-dark btn-sm">Guardar</button>
                         </div>
                     </div>
                 </div>
             </div>
+
+            
         </div>
     </div>
 </div>
