--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/acerca-de/acerca-de.component.css
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/acerca-de/acerca-de.component.css
@@ -16,7 +16,13 @@ h3 h4 h5 {
 p {
     font-weight: bold;
 }
-
+.botonAdd:hover{
+    filter:alpha(opacity=50);
+    -moz-opacity: 0.5;
+    opacity: 0.5;
+    -khtml-opacity: 0.5;
+ }
+ 
 /*ACERCA DE*/
 
 .d-flex {
