--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/acerca-de/acerca-de.component.html
@@ -4,16 +4,25 @@
       <div class="d-flex p-2 bd-highlight">
          <div class="flex-shrink-0">
             <img class="img-responsive rounded-circle" id="imagenPerfil"
-               [src]="url_foto"
+               src="{{persona.url_foto}}"
                alt="...">
          </div>
          <div class="flex-grow-1 ms-3">
-            <h3 small class="text-muted bg-dark  p-2 bg-opacity-10">{{nombre}} {{apellido}}</h3>
-            <h5>{{titulo}}</h5>
+            <h3 small class="text-muted bg-dark  p-2 bg-opacity-10">{{persona.nombre}} {{persona.apellido}}</h3>
+            <h5>{{persona.titulo}}</h5>
             <br>
-            <h5>{{acerca_de}}</h5>
+            <h5>{{persona.acerca_de}}</h5>
          </div>
+         <div *ngIf="modoEdit"> 
          <div class="flex-grow-1 ms-3">
+               <br>
+               <br>
+               <button type="submit" class="btn btn-close-white btn-sm, botonAdd">
+                  <img class="botonEfecto"
+                  src="../assets/edit.png"
+                  id="editar" >
+                </button>
+           </div>    
          </div>
       </div>
    </div>
