--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/educacion/educacion.component.css
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/educacion/educacion.component.css
@@ -26,6 +26,12 @@
     margin-top: 3px;
     margin-right: 1px;
 }
+.botonAdd:hover{
+   filter:alpha(opacity=50);
+   -moz-opacity: 0.5;
+   opacity: 0.5;
+   -khtml-opacity: 0.5;
+}
 
 /*Texto responsive*/
 h3 h4 h5 {
