--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/experiencia/experiencia.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/experiencia/experiencia.component.html
@@ -4,6 +4,11 @@
       <div class="col-md-10">
         <h4>Experiencia</h4>
       </div>
+      <div class="col-md-2">
+        <div *ngIf="modoEdit">
+          <button type="button" class="btn btn-dark btn-sm, botonAdd" routerLink="/addExperiencia/">Agregar+</button>
+        </div> 
+      </div>
     </div>
     <div class="table-responsive" *ngFor="let experiencia of experiencias">
       <table class="table table-responsive table-bg-#rgb(255, 226, 146)">
@@ -25,13 +30,30 @@
               <p>{{experiencia.inicio_exp}}</p>
             </td>
             <td>
-              <P>{{experiencia.fin_exp}}</P>
+              <p>{{experiencia.fin_exp}}</p>
             </td>
+         
+            <div *ngIf="modoEdit">
+            <td>
+              <button type="submit" class="btn btn-close-white btn-sm, botonAdd">
+                <img class="botonEfecto"
+                src="../assets/edit.png"
+                id="editar" >
+              </button>
+            </td>
+            <td>
+              <button type="submit" class="btn btn-close-white btn-sm, botonAdd">
+                <img class="nav-menu-link-img"
+                  src="../assets/delete.png"
+                  id="borrar">
+              </button>
+            </td>
+            </div>
           </tr>
           <tr>
             <td colspan="12">
               <p>{{experiencia.descripcion_exp}}</p>
-            </td>
+            </td> 
           </tr>
         </tbody>
       </table>
