--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/modal-experiencia/modal-experiencia.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/modal-experiencia/modal-experiencia.component.html
@@ -36,7 +36,7 @@
                             <label for="formFileSm" class="form-label">
                                 <h5>Desde</h5>
                             </label>
-                            <input class="form-control form-control-sm" type="date" placeholder=".form-control-sm"
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                             <label for="formFileSm" class="form-label">
                                 <h5>Hasta</h5>
                             </label>
-                            <input class="form-control form-control-sm" type="date" placeholder=".form-control-sm"
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                 aria-label=".form-control-sm example">
                         </div>
                     </div>
