--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/modal-proyecto/modal-proyecto.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/modals/modal-proyecto/modal-proyecto.component.html
@@ -55,7 +55,7 @@
                                 <label for="formFileSm" class="form-label">
                                     <h5>Desde</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="date" placeholder=".form-control-sm"
+                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                     aria-label=".form-control-sm example">
                             </div>
                         </div>
@@ -66,7 +66,7 @@
                                 <label for="formFileSm" class="form-label">
                                     <h5>Hasta</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="date" placeholder=".form-control-sm"
+                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
                                     aria-label=".form-control-sm example">
                             </div>
                         </div>
