--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/proyectos/proyectos.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/proyectos/proyectos.component.html
@@ -4,8 +4,13 @@
             <div class="col-md-10">
                 <h4>Proyectos</h4>
             </div>
+            <div class="col-md-2">
+                <div *ngIf="modoEdit">
+                    <button type="button" class="btn btn-dark btn-sm, botonAdd" routerLink="/add-educacion">Agregar+</button>
+                  </div> 
+            </div>
         </div>
-        <div class="table-responsive" *ngFor="let proyecto of proyectos">
+        <div class="table-responsive" *ngFor="let proyecto of listaProyectos">
             <table class="table table-rb-#rgb(255, 226, 146)">
                 <thead>
                     <tr>
@@ -21,23 +26,39 @@
                         <td colspan="2">
                             <p>{{proyecto.descripcion_proy}}</p>
                         </td>
+                        <div *ngIf="modoEdit">
+                        <td>
+                            <a type="button" class="btn-editar">
+                              <img class="nav-menu-link-img"
+                                src="../assets/edit.png"
+                                id="editar">
+                            </a>
+                        </td>
+                        </div>
                     </tr>
                     <tr>
                         <td>
-                            <p>{{proyecto.inicio_proy}}</p>
+                            <p>{{proyecto.inicio_proy | date:"dd-MM-yyyy"}}</p>
                         </td>
                         <td>
-                            <p>{{proyecto.fin_proy}}</p>
+                            <p>{{proyecto.fin_proy | date:"dd-MM-yyyy"}}</p>
                         </td>
                         <td>
-                          <img [src]="proyecto.imagen">
+                          <P>Link imagen proyecto:{{proyecto.imagen}}</P>
                         </td>
+                        <div *ngIf="modoEdit">
+                        <td>
+                            <a type="button" class="btn-borrar">
+                              <img class="nav-menu-link-img"
+                                src="../assets/delete.png"
+                                id="borrar">
+                            </a>
+                        </td>
+                        </div>
                     </tr>
                     <tr>
                         <td colspan="4">
-                            <a href="">
-                                <P>{{proyecto.link}}</P>
-                            </a>
+                            <P>Link Proyecto:{{proyecto.link}}</P>
                         </td>
                     </tr>
                 </tbody>
