Se hizo modificaciones en los formularios html de los componentes, y se pudo hacer funcionar el agregar de skills, no asi el edita, es el unico que no funcionar

--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/boton-login/boton-login.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/boton-login/boton-login.component.html
@@ -1,4 +1,4 @@
 <!--Boton de login-->
 <a type="button" href="/login" class="iconos">
-    <img class="nav-menu-link-img" src="./assets/lock.png" id="bloqueado">
+    <img class="nav-menu-link-img" src="./assets/lock.png" id="bloqueado" *ngIf="!modoEdit">
 </a>
