--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-educacion/add-educacion.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-educacion/add-educacion.component.html
@@ -1,66 +1,74 @@
 <div>
-    <div class="row">
-        <div class="mb-3">
-           <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
-                <label for="exampleInputEmail1" class="form-label">
-                <h1>Agregue otro estudio</h1>
-                </label>
-                <div class="col-10 order-first">
-                   <div class="mb-3">
-                        <label for="Institución" class="form-label">
-                            <h5>Institución</h5>
+    <div class="contenedor">
+        <div class="d-flex p-2 bd-highlight">
+            <div class="flex-shrink-0">
+                <form>
+                    <div class="mb-3">
+                        <label class="form-label">
+                            <h1>Agregue un estudio mas</h1>
                         </label>
-                        <input class="form-control form-control-sm" type="text" id="institucionAdd" name="institucion"
-                            [(ngModel)]="instiAdd" required placeholder="Nombre de la institucion"
-                            aria-label=".form-control-sm example">
                     </div>
-                </div> 
-                 <div class="col-10 order-first">
-                       <div class="mb-3">
-                           <label for="formFileSm" class="form-label">
-                                 <h5>Carrera/Curso</h5>
-                           </label>
-                           <input class="form-control form-control-sm" type="text" id="titulacionAdd" name="titulacionAdd"
-                             [(ngModel)]="titulAdd" required placeholder="Nombre de la carrera o curso"
-                             aria-label=".form-control-sm example">
+                    <div class="row">
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="Institución" class="form-label">
+                                    <h5>Institución</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" id="institucionAdd"
+                                    name="institucion" [(ngModel)]="instiAdd" required
+                                    placeholder="Nombre de la institucion" aria-label=".form-control-sm example">
+                            </div>
                         </div>
-                 </div>
-                 <div class="col-10 order-first">
-                     <div class="mb-3">
-                        <label for="formFileSm" class="form-label">
-                             <h5>Desde</h5>
-                        </label>
-                        <input class="form-control form-control-sm" type="text" id="inicio_eduAdd" name="inicio_eduAdd"
-                             [(ngModel)]="inicioEduAdd" required placeholder="Inicio" aria-label=".form-control-sm example">
-                     </div>
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Carrera/Curso</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" id="titulacionAdd"
+                                    name="titulacionAdd" [(ngModel)]="titulAdd" required
+                                    placeholder="Nombre de la carrera o curso" aria-label=".form-control-sm example">
+                            </div>
+                        </div>
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Desde</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" id="inicio_eduAdd"
+                                    name="inicio_eduAdd" [(ngModel)]="inicioEduAdd" required placeholder="Inicio"
+                                    aria-label=".form-control-sm example">
+                            </div>
 
-                  </div>
-                  <div class="col-10 order-first">
-                     <div class="mb-3">
-                          <label for="formFileSm" class="form-label">
-                             <h5>Hasta</h5>
-                           </label>
-                           <input class="form-control form-control-sm" type="text" id="fin_eduAdd" name="fin_eduAdd"
-                               [(ngModel)]="finEduAdd" required placeholder="Hasta" aria-label=".form-control-sm example">
-                       </div>
-                  </div>
-                  <div class="col-10 order-first">
-                        <div class="mb-3">
-                            <label for="formFileSm" class="form-label">
-                                 <h5>Descripción</h5>
-                            </label>
-                           <textarea class="form-control form-control-sm" type="text" id="descripcion_eduAdd"
-                               name="descripcion_eduAdd" [(ngModel)]="descripcionEduAdd" required
-                               placeholder=" Descripcion carrera o curso" aria-label="With textarea"></textarea>
-                        </div>       
-                  </div>
-                  <!--Boton de guardado-->
-                   <div class="col-10 order-first">
-                        <div class="mb-3 float-right">
+                        </div>
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Hasta</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" id="fin_eduAdd"
+                                    name="fin_eduAdd" [(ngModel)]="finEduAdd" required placeholder="Hasta"
+                                    aria-label=".form-control-sm example">
+                            </div>
+                        </div>
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Descripción</h5>
+                                </label>
+                                <textarea class="form-control form-control-sm" type="text" id="descripcion_eduAdd"
+                                    name="descripcion_eduAdd" [(ngModel)]="descripcionEduAdd" required
+                                    placeholder=" Descripcion carrera o curso" aria-label="With textarea"></textarea>
+                            </div>
+                        </div>
+                        <!--Boton de guardado-->
+                        <div class="col-10 order-first">
+                            <div class="mb-3 float-right">
                                 <button type="button" class="btn btn-dark btn-sm">Agregar educacion</button>
+                            </div>
                         </div>
                     </div>
-            </form>    
+                </form>
+            </div>
         </div>
-    </div>    
+    </div>
 </div>
