--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-experiencia/add-experiencia.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-experiencia/add-experiencia.component.html
@@ -1,76 +1,77 @@
 <div>
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label"><h1>Agregue una experiencia mas</h1></label>
-    <div class="row">
-        <div class="col-12 order-first">
-            <div class="mb-3">
-                <label for="formFileSm" class="form-label">
-                    <h5>Empresa</h5>
-                </label>
-                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                    aria-label=".form-control-sm example">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 order-first">
-            <div class="mb-3">
-                <label for="formFileSm" class="form-label">
-                    <h5>Puesto</h5>
-                </label>
-                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                    aria-label=".form-control-sm example">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 order-first">
-            <div class="mb-3">
-                <label for="formFileSm" class="form-label">
-                    <h5>Desde</h5>
-                </label>
-                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                    aria-label=".form-control-sm example">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 order-first">
-            <div class="mb-3">
-                <label for="formFileSm" class="form-label">
-                    <h5>Hasta</h5>
-                </label>
-                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                    aria-label=".form-control-sm example">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 order-first">
-            <div class="mb-3">
-                <label for="formFileSm" class="form-label">
-                    <h5>Estado actual</h5>
-                </label>
-                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                    aria-label=".form-control-sm example">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 order-first">
-            <div class="mb-3">
-                <label for="formFileSm" class="form-label">
-                    <h5>Descripción</h5>
-                </label>
-                <textarea class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                    aria-label="With textarea"></textarea>
-            </div>
-        </div>
-    </div>
-    <div class="row d-flex">
-        <div class="col-12 d-flex justify-content-end">
-            <div class="mb-3 float-right">
-                <button type="button" class="btn btn-dark btn-sm">Agregar experiencia</button>
+    <div class="contenedor">
+        <div class="d-flex p-2 bd-highlight">
+            <div class="flex-shrink-0">
+                <form>
+                    <div class="mb-3">
+                        <label class="form-label">
+                            <h1>Agregue una experiencia mas</h1>
+                        </label>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Puesto</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                                    aria-label=".form-control-sm example">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Desde</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                                    aria-label=".form-control-sm example">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Hasta</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                                    aria-label=".form-control-sm example">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Estado actual</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                                    aria-label=".form-control-sm example">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Descripción</h5>
+                                </label>
+                                <textarea class="form-control form-control-sm" type="text"
+                                    placeholder=".form-control-sm" aria-label="With textarea"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row d-flex">
+                        <div class="col-12 d-flex justify-content-end">
+                            <div class="mb-3 float-right">
+                                <button type="button" class="btn btn-dark btn-sm">Agregar experiencia</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
