--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-proyecto/add-proyecto.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-proyecto/add-proyecto.component.html
@@ -1,1 +1,93 @@
-<p>add-proyecto works!</p>
+<div>
+    <div class="contenedor">
+        <div class="d-flex p-2 bd-highlight">
+            <div class="flex-shrink-0">
+                <form>
+                    <div class="mb-3">
+                        <label class="form-label">
+                            <h1>Agregue un proyecto mas</h1>
+                        </label>
+                    </div>
+                    <!--Aqui va el formulario-->
+                    <div class="row">
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Nombre</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                                    aria-label=".form-control-sm example">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Descripción</h5>
+                                </label>
+                                <textarea class="form-control form-control-sm" type="text"
+                                    placeholder=".form-control-sm" aria-label="With textarea"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-10 order-first">
+                                <div class="mb-3">
+                                    <label for="formFileSm" class="form-label">
+                                        <h5>Imagen del proyecto</h5>
+                                    </label>
+                                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-10 order-first">
+                                <div class="mb-3">
+                                    <label for="formFileSm" class="form-label">
+                                        <h5>Link al proyecto</h5>
+                                    </label>
+                                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-10 order-first">
+                                <div class="mb-3">
+                                    <label for="formFileSm" class="form-label">
+                                        <h5>Desde</h5>
+                                    </label>
+                                    <input class="form-control form-control-sm" type="text"
+                                        placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-10 order-first">
+                                <div class="mb-3">
+                                    <label for="formFileSm" class="form-label">
+                                        <h5>Hasta</h5>
+                                    </label>
+                                    <input class="form-control form-control-sm" type="text"
+                                        placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <div class="row d-flex">
+                                <div class="col-12 d-flex justify-content-end">
+                                    <div class="mb-3 float-right">
+                                        <button type="button" class="btn btn-dark btn-sm">Cancelar</button>
+                                    </div>
+                                    &nbsp;
+                                    <div class="mb-3 float-right">
+                                        <button type="button" class="btn btn-dark btn-sm">Guardar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
