--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-skill/add-skill.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-skill/add-skill.component.html
@@ -1,36 +1,44 @@
 <div>
-    <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
-        <div class="mb-3">
-           <label class="form-label"><h1>Agregue un skill mas</h1></label>
-        </div>   
-        <div class="row">
-           <div class="form">
-                <div class="mb-3">
-                    <label for="skill" class="form-label"><h5>Skill</h5></label>
-                    <input class="form-control form-control-sm" type="text" id="skill" name="skill"
-                     placeholder=".form-control-sm" aria-label=".form-control-sm example" 
-                     [(ngModel)]="skill" required >
-                </div>
-             </div>
-       </div>
-        <div class="row">
-            <div class="form">
-                <div class="mb-3">
-                    <label for="porcentaje" class="form-label">
-                         <h5>Porcentaje</h5>
-                    </label>
-                    <input class="form-control form-control-sm" type="number" id="porcentaje" name="porcentaje"
-                    placeholder=".form-control-sm" aria-label=".form-control-sm example"
-                    [(ngModel)]="porcentaje">
-                </div>
+    <div class="contenedor">
+        <div class="d-flex p-2 bd-highlight">
+            <div class="flex-shrink-0">
+                <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
+                    <div class="mb-3">
+                        <label class="form-label">
+                            <h1>Agregue un skill mas</h1>
+                        </label>
+                    </div>
+                    <div class="row">
+                        <div class="mb-3" class="form-group">
+                            <label for="skill">
+                                <h5>Skill</h5>
+                            </label>
+                            <input type="text" class="form-control" id="skill" name="skill" [(ngModel)]="skill"
+                                required>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="mb-3" class="form-group">
+                            <label for="porcentaje">
+                                <h5>Porcentaje</h5>
+                            </label>
+                            <input type="number" class="form-control" id="porcentaje" name="porcentaje"
+                                [(ngModel)]="porcentaje" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="mb-3">
+                            <br>
+                            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                                <button type="submit" class="btn btn-dark btn-sm">Limpiar</button>
+                                &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+                                <button type="submit" class="btn btn-dark btn-sm">Agregar skill</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-        <div>
-            <div class="mb-3">
-                <div class="mb-3 float-right">
-                    <button type="button" class="btn btn-dark btn-sm">Agregar skill</button>
-                </div>
-            </div>
-       </div>
-    </form>   
+    </div>
 </div>
