--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-acerca-de/edit-acerca-de.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-acerca-de/edit-acerca-de.component.html
@@ -1,4 +1,3 @@
-<p>edit-acerca-de works!</p>
 <!-- Para el input el avatar de usuario, para elegir entre 4 o 5 diferentes
 <label for="exampleDataList" class="form-label">Datalist example</label>
 <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
@@ -10,3 +9,93 @@
   <option value="Chicago">
 </datalist>
 -->
+<div>
+  <div class="contenedor">
+    <div class="d-flex p-2 bd-highlight">
+      <div class="flex-shrink-0">
+        <form>
+          <div class="mb-3">
+            <label class="form-label">
+              <h1>Edite acerca de mi</h1>
+              <h1></h1>
+            </label>
+          </div>
+          <!--Aqui va el formulario-->
+          <div class="row">
+            <div class="col-12 order-first">
+              <div class="mb-3">
+                <label for="formFileSm" class="form-label">
+                  <h5>Foto perfil</h5>
+                </label>
+                <datalist id="datalistOptions">
+                  <option value="./assets/AvatarMaker.png">
+                  <option value="./assets/AvatarMaker2.png">
+                  <option value="...">
+                  <option value="...">
+                  <option value="...">
+                </datalist>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 order-first">
+              <div class="mb-3">
+                <label for="formFileSm" class="form-label">
+                  <h5>Nombre</h5>
+                </label>
+                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                  aria-label=".form-control-sm example">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 order-first">
+              <div class="mb-3">
+                <label for="formFileSm" class="form-label">
+                  <h5>Apellido</h5>
+                </label>
+                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                  aria-label=".form-control-sm example">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 order-first">
+              <div class="mb-3">
+                <label for="formFileSm" class="form-label">
+                  <h5>Título</h5>
+                </label>
+                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                  aria-label=".form-control-sm example">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 order-first">
+              <div class="mb-3">
+                <label for="formFileSm" class="form-label">
+                  <h5>Acerca de mi</h5>
+                </label>
+                <textarea class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                  aria-label="With textarea"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <div class="row d-flex">
+              <div class="col-12 d-flex justify-content-end">
+                <div class="mb-3 float-right">
+                  <button type="button" class="btn btn-dark btn-sm">Cancelar</button>
+                </div>
+                &nbsp;
+                <div class="mb-3 float-right">
+                  <button type="button" class="btn btn-dark btn-sm">Guardar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
