--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-banner/edit-banner.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-banner/edit-banner.component.html
@@ -1,4 +1,3 @@
-<p>edit-banner works!</p>
 <!-- Para el input banner, para elegir entre 4 o 5 diferentes
 <label for="exampleDataList" class="form-label">Datalist example</label>
 <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
@@ -10,3 +9,49 @@
   <option value="Chicago">
 </datalist>
 -->
+<div>
+  <div class="contenedor">
+    <div class="d-flex p-2 bd-highlight">
+      <div class="flex-shrink-0">
+        <form>
+          <div class="mb-3">
+            <label class="form-label">
+              <h1>Edite el banner</h1>
+              <h1></h1>
+            </label>
+          </div>
+          <div class="row">
+            <div class="col-12 order-first">
+              <div class="mb-3">
+                <label for="formFileSm" class="form-label">
+                  <h5>Imagen del banner</h5>
+                </label>
+                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
+                <datalist id="datalistOptions">
+                  <option value="./assets/banner1.png">
+                  <option value="./assets/banner2.png">
+                  <option value="...">
+                  <option value="...">
+                  <option value="...">
+                </datalist>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <div class="row d-flex">
+              <div class="col-12 d-flex justify-content-end">
+                <div class="mb-3 float-right">
+                  <button type="button" class="btn btn-dark btn-sm">Cancelar</button>
+                </div>
+                &nbsp;
+                <div class="mb-3 float-right">
+                  <button type="button" class="btn btn-dark btn-sm">Guardar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
