--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-proyecto/edit-proyecto.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-proyecto/edit-proyecto.component.html
@@ -1,1 +1,89 @@
-<p>edit-proyecto works!</p>
+<div>
+    <div class="contenedor">
+        <div class="d-flex p-2 bd-highlight">
+            <div class="flex-shrink-0">
+                <form>
+                    <div class="mb-3">
+                        <label class="form-label">
+                            <h1>Edite el proyecto</h1>
+                            <h1></h1>
+                        </label>
+                    </div>
+                    <div class="row">
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Nombre</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
+                                    aria-label=".form-control-sm example">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Descripción</h5>
+                                </label>
+                                <textarea class="form-control form-control-sm" type="text"
+                                    placeholder=".form-control-sm" aria-label="With textarea"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-10 order-first">
+                                <div class="mb-3">
+                                    <label for="formFileSm" class="form-label">
+                                        <h5>Imagen del proyecto</h5>
+                                    </label>
+                                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-10 order-first">
+                                <div class="mb-3">
+                                    <label for="formFileSm" class="form-label">
+                                        <h5>Link al proyecto</h5>
+                                    </label>
+                                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-10 order-first">
+                                <div class="mb-3">
+                                    <label for="formFileSm" class="form-label">
+                                        <h5>Desde</h5>
+                                    </label>
+                                    <input class="form-control form-control-sm" type="text"
+                                        placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-10 order-first">
+                                <div class="mb-3">
+                                    <label for="formFileSm" class="form-label">
+                                        <h5>Hasta</h5>
+                                    </label>
+                                    <input class="form-control form-control-sm" type="text"
+                                        placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                                <div class="mb-3">
+                                    <br>
+                                    <button type="submit" class="btn btn-dark btn-sm">Limpiar</button>&nbsp;
+                                    <button type="submit" class="btn btn-dark btn-sm">Editar skill</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>    
+            </div>
+        </div>
+    </div>
+</div>
