--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/navbar/navbar.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/navbar/navbar.component.html
@@ -1,26 +1,26 @@
 <nav class="navbar navbar-expand-lg bg-dark py-0">
-    <div class="container-fluid">
-      <a class="navbar-brand" href=""><img class="nav-menu-link-icono"
-          src="./assets/APLogo-20-20.png"></a>
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      </ul>
-      <ul class="navbar-nav  justify-content-end">
-        <li class="nav-item">
-          <a href=""><img class="nav-menu-link-img"
-              src="./assets/github.png"></a>
-        </li>
-        <li class="nav-item">
-          <a href=""><img class="nav-menu-link-img"
-              src="./assets/linkedin.png"></a>
-        </li>
-        <li class="nav-item">
-          <a href=""><img class="nav-menu-link-img"
-              src="./assets/facebook.png"></a>
-        </li>
-        <!--Boton para loguear-->
-        <li class="nav-item">
-           <app-boton-login></app-boton-login>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div class="container-fluid">
+    <a class="navbar-brand" href=""><img class="nav-menu-link-icono" src="./assets/APLogo-20-20.png"></a>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    </ul>
+    <ul class="navbar-nav  justify-content-end">
+      <li class="nav-item">
+        <a href=""><img class="nav-menu-link-img" src="./assets/github.png"></a>
+      </li>
+      <li class="nav-item">
+        <a href=""><img class="nav-menu-link-img" src="./assets/linkedin.png"></a>
+      </li>
+      <li class="nav-item">
+        <a href=""><img class="nav-menu-link-img" src="./assets/facebook.png"></a>
+      </li>
+      <!--Boton para loguear-->
+      <li class="nav-item">
+        <app-boton-login></app-boton-login>
+      </li>
+      <!--Boton para desloguear-->
+      <li class="nav-item">
+        <app-boton-logout></app-boton-logout>
+      </li>
+    </ul>
+  </div>
+</nav>
